--- a/generators/react-native/src/main/resources/react-native/package.mustache
+++ b/generators/react-native/src/main/resources/react-native/package.mustache
@@ -41,6 +41,7 @@
     "dependencies": {
         "@babel/runtime": "^7.19.4",
         "crypto-js": "3.3.0",
+        "jwt-decode": "^3.1.2",
         "qs": "^6.11.0",
         "superagent": "^7.0.2",
         "url-parse": "^1.5.10"
