--- a/generators/react-native/src/main/resources/react-native/README.mustache
+++ b/generators/react-native/src/main/resources/react-native/README.mustache
@@ -14,7 +14,7 @@ For more information, please visit [{{{infoUrl}}}]({{{infoUrl}}})
 
 ## Support versions
 
-We support React Native versions 0.60 and higher. To use this package with older versions of React Native, please visit [react-native-sdk-lt-0-6](https://github.com/kinde-oss/react-native-sdk-lt-0-6)
+We support React Native versions 0.60 and higher. To use this package with older versions of React Native, please visit [react-native-sdk-0-5x](https://github.com/kinde-oss/react-native-sdk-0-5x)
 
 ## Installing dependencies
 
@@ -299,11 +299,11 @@ To access the user information, {{#apiInfo}}{{#apis}}{{#-first}}{{#operations}}{
 
 ```javascript
 ...
-import { ..., {{{classname}}}, Configuration, ... } from '@kinde-oss/react-native-sdk';
+import { ..., {{{classname}}}, ApiClient, ... } from '@kinde-oss/react-native-sdk';
 ...
 
 const getUserProfile = () => {
-  const config = new Configuration({
+  const config = new ApiClient.Configuration({
     basePath: KINDE_ISSUER_URL,
   });
   const apiInstance = new {{{classname}}}(config)
