--- a/generators/react-native/src/main/resources/react-native/SDK/Enums/AuthStatus.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/Enums/AuthStatus.mustache
@@ -1,3 +1,11 @@
+{{>licenseInfo}}
+
+{{#emitJSDoc}}/**
+* The Enums SDK module.
+* @module SDK/Enums
+* @version {{projectVersion}}
+*/{{/emitJSDoc}}
+
 export enum AuthStatus {
     UNAUTHENTICATED = 'UNAUTHENTICATED',
     AUTHENTICATING = 'AUTHENTICATING',
