added unit-test missing, docs and update readme

--- a/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
+++ b/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
@@ -19,4 +19,13 @@ export type UserProfile = {
     given_name: string;
     family_name: string;
     email: string;
-}; 
+};
+
+export type TokenResponse = {
+    access_token: string;
+    refresh_token: string;
+    id_token: string;
+    scope: string;
+    token_type: string;
+    expires_in: number;
+};
