--- a/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
+++ b/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
@@ -1,11 +1,17 @@
+{{>licenseInfo}}
+
+{{#emitJSDoc}}/**
+* The KindeSDK module.
+* @module SDK/types
+* @version {{projectVersion}}
+*/{{/emitJSDoc}}
+
 export type AdditionalParameters = {
     audience?: string;
     is_create_org?: boolean;
     org_code?: string;
     org_name?: string;
 };
-
-export type TokenType = 'accessToken' | 'id_token';
 
 export type TokenID = {
     sub: string;
@@ -28,4 +34,22 @@ export type TokenResponse = {
     scope: string;
     token_type: string;
     expires_in: number;
+};
+
+export type AccessTokenDecoded = {
+    aud: string[];
+    azp: string;
+    exp: number;
+    iat: number;
+    iss: string;
+    jti: string;
+    gty?: string[];
+    scp?: string[];
+};
+
+export type IdTokenDecoded = {
+    sub: string;
+    given_name: string;
+    family_name: string;
+    email: string;
 };
