--- a/generators/react-native/src/main/resources/react-native/ApiClient.mustache
+++ b/generators/react-native/src/main/resources/react-native/ApiClient.mustache
@@ -103,11 +103,11 @@ export class BaseAPI {
 
     protected async request(context: RequestOpts, initOverrides?: RequestInit | InitOverrideFunction): Promise<Response> {
         const { url, init } = await this.createFetchParams(context, initOverrides);
-        const accessToken = sessionStorage.getAccessToken();
+        const accessToken = await sessionStorage.getAccessToken();
         const response = await this.fetchApi(url, {
             ...init,
             headers: {
-                Authorization: `Bearer ${accessToken}`
+                Authorization: accessToken ? `Bearer ${accessToken}` : ''
             }
         });
         if (response.status >= 200 && response.status < 300) {
