update template support for both platforms

--- a/generators/react-native/src/main/resources/react-native/SDK/Storage/index.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/Storage/index.mustache
@@ -8,7 +8,7 @@ import {
 } from '../../types/KindeSDK';
 import { TokenType } from '../Enums/TokenType.enum';
 import BaseStore from './Base';
-import KindeStorage from './KindeStorage'
+import Constants, { ExecutionEnvironment } from 'expo-constants';
 
 {{#emitJSDoc}}/**
 * The Storage SDK module.
@@ -17,20 +17,38 @@ import KindeStorage from './KindeStorage'
 */{{/emitJSDoc}}
 
 class Storage extends BaseStore {
-    protected readonly storage: KindeStorage;
-
     constructor() {
         super();
-        this.storage = new KindeStorage();
+    }
+
+    async getStorage() {
+        const isExpoGo =
+            Constants.executionEnvironment === ExecutionEnvironment.StoreClient;
+
+        if (isExpoGo) {
+            const builder = await import('./ExpoStorage');
+            return new builder.default();
+        }
+        const builder = await import('./RNStorage');
+        return new builder.default();
     }
 
     async getToken(): Promise<TokenResponse | null> {
-        const cred = await this.storage.getItem();
-        return cred ? JSON.parse(cred.password) : null;
+        const storage = await this.getStorage();
+        const cred = await storage.getItem();
+        if (typeof cred === 'object') {
+            // RNStorage (KeyChain)
+            return cred
+                ? JSON.parse((cred as { password: string }).password)
+                : null;
+        }
+        // Expo Secure Store
+        return cred ? JSON.parse(cred as string) : null;
     }
 
     async setToken(token: string) {
-        return this.storage.setItem(token);
+        const storage = await this.getStorage();
+        return storage.setItem(token);
     }
 
     async getTokenType(type: TokenType) {
@@ -82,7 +100,8 @@ class Storage extends BaseStore {
 
     async clearAll() {
         this.clear();
-        return this.storage.clear();
+        const storage = await this.getStorage();
+        return storage.clear();
     }
 
     async getUserProfile() {
