--- a/generators/react-native/src/main/resources/react-native/SDK/Storage/RNStorage.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/Storage/RNStorage.mustache
@@ -1,3 +1,5 @@
+//@ts-nocheck
+
 {{>licenseInfo}}
 
 import * as KeyChain from 'react-native-keychain';
@@ -8,7 +10,7 @@ import * as KeyChain from 'react-native-keychain';
 * @version {{projectVersion}}
 */{{/emitJSDoc}}
 
-export default class KindeStorage {
+export default class RNStorage {
     async getItem() {
         return KeyChain.getGenericPassword();
     }
