--- a/generators/react-native/src/main/resources/react-native/index.spec.mustache
+++ b/generators/react-native/src/main/resources/react-native/index.spec.mustache
@@ -4,7 +4,7 @@ const { KindeSDK, ApiClient, OAuthApi, AuthStatus } = require(process.cwd() +
 import { Linking } from 'react-native';
 import Url from 'url-parse';
 import BaseStore from '../src/SDK/Storage/Base';
-import KindeStorage from '../src/SDK/Storage/KindeStorage';
+import RNStorage from '../src/SDK/Storage/RNStorage';
 
 BaseStore.prototype.getItem = jest
     .fn()
@@ -22,11 +22,11 @@ const fakeTokenResponse = {
     expires_in: 86400 // 1 day
 };
 
-KindeStorage.prototype.getItem = jest
+RNStorage.prototype.getItem = jest
     .fn()
     .mockReturnValue({ password: JSON.stringify(fakeTokenResponse) });
 
-KindeStorage.prototype.setItem = jest.fn();
+RNStorage.prototype.setItem = jest.fn();
 
 global.fetch = jest.fn(() =>
     Promise.resolve({
@@ -43,6 +43,13 @@ jest.mock('react-native-keychain', () => {
         setGenericPassword: jest.fn().mockResolvedValue(),
         getGenericPassword: jest.fn().mockResolvedValue(),
         resetGenericPassword: jest.fn().mockResolvedValue()
+    };
+});
+
+jest.mock('expo-constants', () => {
+    return {
+        executionEnvironment: 'test',
+        ExecutionEnvironment: jest.fn().mockResolvedValue()
     };
 });
 
