--- a/generators/react-native/src/main/resources/react-native/package.mustache
+++ b/generators/react-native/src/main/resources/react-native/package.mustache
@@ -41,6 +41,9 @@
     "dependencies": {
         "@babel/runtime": "^7.19.4",
         "crypto-js": "3.3.0",
+        "expo-constants": "^14.2.1",
+        "expo-modules-core": "^1.2.6",
+        "expo-secure-store": "^12.1.1",
         "jwt-decode": "^3.1.2",
         "qs": "^6.11.0",
         "react-native-keychain": "^8.0.0",
@@ -91,6 +94,7 @@
         "typescript": "^4.8.4"
     },
     "peerDependencies": {
+        "expo-secure-store": "*",
         "react-native": ">= 0.60",
         "react-native-keychain": ">= 8.0"
     },
