--- a/generators/react-native/src/main/resources/react-native/SDK/Storage/base.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/Storage/base.mustache
@@ -1,3 +1,11 @@
+{{>licenseInfo}}
+
+{{#emitJSDoc}}/**
+* The Oauth SDK module.
+* @module SDK/Oauth
+* @version {{projectVersion}}
+*/{{/emitJSDoc}}
+
 class BaseStore {
     private data: Map<string, string>;
 
