--- a/generators/react-native/src/main/resources/react-native/index.mustache
+++ b/generators/react-native/src/main/resources/react-native/index.mustache
@@ -2,8 +2,7 @@
 
 import KindeSDK from './SDK/KindeSDK';
 import * as Utils from './SDK/Utils'; 
-import { sessionStorage as Storage } from './SDK/Storage';
-import * as AuthStatus from './SDK/Enums/AuthStatus.enum';
+import Storage from './SDK/Storage';
 
 import * as ApiClient from './ApiClient';
 
@@ -63,13 +62,7 @@ export {
         * The Storage SDK module.
         * @property {module:SDK/Storage}
     */</emitJSDoc>
-    Storage,
-
-    <#emitJSDoc>/**
-        * The AuthStatus SDK module.
-        * @property {module:SDK/Enums/AuthStatus}
-    */</emitJSDoc>
-    AuthStatus
+    Storage
 }
 <={{ }}=>
 
