--- a/generators/react-native/src/main/resources/react-native/README.mustache
+++ b/generators/react-native/src/main/resources/react-native/README.mustache
@@ -14,8 +14,8 @@ For more information, please visit [{{{infoUrl}}}]({{{infoUrl}}})
 
 ## Support versions
 
-- React Native: We support React Native versions 0.60 and higher. To use this package with older versions of React Native, please visit [react-native-sdk-0-5x](https://github.com/kinde-oss/react-native-sdk-0-5x)
-- Expo
+-   React Native: We support React Native versions 0.60 and higher. To use this package with older versions of React Native, please visit [react-native-sdk-0-5x](https://github.com/kinde-oss/react-native-sdk-0-5x)
+-   Expo
 
 ## Installing dependencies
 
@@ -172,6 +172,7 @@ KINDE_CLIENT_ID=your_kinde_client_id
 ### Configuration Deep link
 
 #### With React Native
+
 If your app was launched from an external url registered to your app you can access and handle it from any component you want with:
 
 ```javascript
@@ -257,9 +258,11 @@ Open `AndroidManifest.xml` and update your scheme:
     <data android:scheme="myapp" android:host="your_kinde_issuer.kinde.com" />  // you can change it
 </intent-filter>
 ```
+
 #### With Expo
 
 #### Linking to your app
+
 To link to your [development](https://docs.expo.dev/development/introduction/) build or standalone app, you need to specify a custom URL scheme for your app. You can register a scheme in your Expo config (**app.json**, **app.config.js**) by adding a string under the `scheme` key:
 
 ```json
@@ -270,11 +273,14 @@ To link to your [development](https://docs.expo.dev/development/introduction/) b
   }
 }
 ```
+
 #### Linking to Expo Go
+
 [Expo Go](https://expo.dev/expo-go) uses the `exp://` scheme, however, if we link to `exp://` without any address afterward, it will open the app to the home screen.
 
 In development, your app will live at a url like `exp://127.0.0.1:19000`. When published, an experience will be hosted at a URL like ` exp://u.expo.dev/[project-id]?channel-name=[channel-name]&runtime-version=[runtime-version]`, where `u.expo.dev/[project-id]` is the hosted URL that Expo Go fetches from.
 **Note**: You also should update your callback url to both your app and Kinde:
+
 ```javascript
 KINDE_ISSUER_URL=https://your_kinde_domain.kinde.com
 KINDE_POST_CALLBACK_URL=exp://your_machine_ip:your_machine_port // f.e: exp://127.0.0.1:19000
@@ -288,7 +294,7 @@ You’ll need to create a new instance of the Kinde Auth client object. Please e
 
 ```javascript
 ...
-import { KindeSDK } from '@kinde-oss/react-native-sdk';
+import { KindeSDK } from '{{{projectName}}}';
 ...
 
 ...
@@ -330,55 +336,38 @@ const handleSignIn = () => {
 ### Handle redirect
 
 #### With React Native
+
 Once your user is redirected back to your app from Kinde, using the `getToken` method to get token instance from Kinde
 
 ```javascript
 const handleCallback = async (url: string) => {
-  const token = await client.getToken(url);
-  console.log('token here', token);
+    const token = await client.getToken(url);
+    console.log('token here', token);
 };
 
 useEffect(() => {
-  Linking.getInitialURL()
-    .then((url) => {
-      if (url) {
-        handleCallback(url);
-      }
-    })
-    .catch((err) => console.error('An error occurred', err));
+    Linking.getInitialURL()
+        .then((url) => {
+            if (url) {
+                handleCallback(url);
+            }
+        })
+        .catch((err) => console.error('An error occurred', err));
 
-  Linking.addEventListener('url', (event) => {
-    if (event.url) {
-      handleCallback(event.url);
-    }
-  });
+    Linking.addEventListener('url', (event) => {
+        if (event.url) {
+            handleCallback(event.url);
+        }
+    });
 }, []);
 ```
 
-You can also get the current authentication status with `AuthStatus`:
+Also, use `isAuthenticated` from the SDK to determine whether the user is authenticated or not:
 
 ```javascript
-...
-import {..., AuthStatus ,...} from '@kinde-oss/react-native-sdk';
-...
-
-const handleCallback = async (url: string) => {
-  if (client.authStatus !== AuthStatus.UNAUTHENTICATED) {
-    const token = await client.getToken(url);
-    console.log('token here', token);
-  }
-};
-```
-
-Or simply use `isAuthenticated` from the SDK to determine whether the user is authenticated or not:
-
-```javascript
-const handleCallback = async (url: string) => {
-  if (client.isAuthenticated) {
-    const token = await client.getToken(url);
-    console.log('token here', token);
-  }
-};
+if (await client.isAuthenticated) {
+    // TODO
+}
 ```
 
 #### With Expo
@@ -417,7 +406,7 @@ This is implemented in much the same way as logging in or registering. The Kinde
 
 ```javascript
 const handleLogout = () => {
-  client.logout();
+    client.logout();
 };
 ```
 
@@ -425,37 +414,22 @@ const handleLogout = () => {
 
 **\*Note warning:** Before you call the API, please make sure that you've already authenticated. If not, errors will appear there.\*
 
-To access the user information, {{#apiInfo}}{{#apis}}{{#-first}}{{#operations}}{{#operation}}{{#-first}}use the `{{{classname}}}`, `ApiClient` classes exported from `{{projectName}}`, then call the `{{{operationId}}}` method of `{{{classname}}}` instance
+To access the user information, use the `OAuthApi`, `ApiClient` classes exported from `{{{projectName}}}`, then call the `getUser` method of `OAuthApi` instance
 
 ```javascript
 ...
-import { ..., {{{classname}}}, ApiClient, ... } from '@kinde-oss/react-native-sdk';
+import { ..., OAuthApi, ApiClient, ... } from '{{{projectName}}}';
 ...
 
 const getUserProfile = () => {
   const config = new ApiClient.Configuration({
     basePath: KINDE_ISSUER_URL,
   });
-  const apiInstance = new {{{classname}}}(config)
-  {{#hasParams}}
-  {{#requiredParams}}
-  var {{{paramName}}} = {{{example}}}; // {{=< >=}}{<&dataType>}<={{ }}=> {{{description}}}
-  {{/requiredParams}}
-  {{#optionalParams}}
-  {{#-first}}
-  var opts = {
-  {{/-first}}
-    '{{{paramName}}}': {{{example}}}{{^-last}},{{/-last}} // {{=< >=}}{<&dataType>}<={{ }}=> {{{description}}}
-  {{#-last}}
-  };
-  {{/-last}}
-  {{/optionalParams}}
-  {{/hasParams}}
-  const data = await apiInstance.{{{operationId}}}({{#requiredParams}}{{{paramName}}}{{^-last}}, {{/-last}}{{/requiredParams}}{{#optionalParams}}{{#-last}}{{#hasRequiredParams}}, {{/hasRequiredParams}}opts{{/-last}}{{/optionalParams}});
-  {{#returnType}}console.log('API called successfully. Returned data: ' + data);{{/returnType}}{{^returnType}}console.log('API called successfully.');{{/returnType}}
+  const apiInstance = new OAuthApi(config)
+  const data = await apiInstance.getUser();
+  console.log('API called successfully. Returned data: ' + data);
 }
 ```
-{{/-first}}{{/operation}}{{/operations}}{{/-first}}{{/apis}}{{/apiInfo}}
 
 ### View users in Kinde
 
@@ -479,58 +453,85 @@ const permissions = [
     'delete:tasks'
 ];
 ```
+
 We provide helper functions to more easily access permissions:
+
 ```javascript
-client.getPermission("create:todos");
+await client.getPermission('create:todos');
 // {orgCode: "org_1234", isGranted: true}
 
-client.getPermissions();
+await client.getPermissions();
 // {orgCode: "org_1234", permissions: ["create:todos", "update:todos", "read:todos"]}
 ```
+
 A practical example in code might look something like:
+
 ```
-if (client.getPermission("create:todos").isGranted) {
+if (await client.getPermission("create:todos").isGranted) {
     // show Create Todo button in UI
 }
 ```
+
 ### Audience
+
 An `audience` is the intended recipient of an access token - for example the API for your application. The audience argument can be passed to the Kinde client to request an audience be added to the provided token.
 
 The audience of a token is the intended recipient of the token.
+
 ```javascript
-const client = new KindeSDK(YOUR_KINDE_ISSUER, YOUR_KINDE_REDIRECT_URI, YOUR_KINDE_CLIENT_ID, YOUR_KINDE_LOGOUT_REDIRECT_URI, YOUR_SCOPES, 
-  {
-    audience: 'api.yourapp.com'
-  });
+const client = new KindeSDK(
+    YOUR_KINDE_ISSUER,
+    YOUR_KINDE_REDIRECT_URI,
+    YOUR_KINDE_CLIENT_ID,
+    YOUR_KINDE_LOGOUT_REDIRECT_URI,
+    YOUR_SCOPES,
+    {
+        audience: 'api.yourapp.com'
+    }
+);
 ```
+
 For details on how to connect, see [Register an API](https://kinde.com/docs/developer-tools/register-an-api/)
 
 ### Overriding scope
+
 By default the KindeSDK SDK requests the following scopes:
-- profile
-- email
-- offline
-- openid
+
+-   profile
+-   email
+-   offline
+-   openid
 
 You can override this by passing scope into the KindeSDK
+
 ```javascript
-const client = new KindeSDK(YOUR_KINDE_ISSUER, YOUR_KINDE_REDIRECT_URI, YOUR_KINDE_CLIENT_ID, YOUR_KINDE_LOGOUT_REDIRECT_URI, "profile email offline openid");
+const client = new KindeSDK(
+    YOUR_KINDE_ISSUER,
+    YOUR_KINDE_REDIRECT_URI,
+    YOUR_KINDE_CLIENT_ID,
+    YOUR_KINDE_LOGOUT_REDIRECT_URI,
+    'profile email offline openid'
+);
 ```
 
 ### Getting claims
+
 We have provided a helper to grab any claim from your id or access tokens. The helper defaults to access tokens:
+
 ```javascript
-client.getClaim("aud");
+await client.getClaim('aud');
 // ["api.yourapp.com"]
 
-client.getClaim("given_name", "id_token");
+await client.getClaim('given_name', 'id_token');
 // "David"
 ```
 
-
 ### Organizations Control
+
 #### Create an organization
+
 To have a new organization created within your application, you will need to run a similar function to below:
+
 ```javascript
 <Button title="Create Organization" onPress={handleCreateOrg} />
 ```
@@ -549,35 +550,37 @@ client.createOrg({org_name: 'Your Organization'});
 ```
 
 #### Sign in and sign up to organizations
+
 Kinde has a unique code for every organization. You’ll have to pass this code through when you register a new user. Example function below:
+
 ```javascript
-client.register({org_code: 'your_org_code'});
+client.register({ org_code: 'your_org_code' });
 ```
+
 If you want a user to sign in into a particular organization, pass this code along with the sign in method.
+
 ```javascript
-client.login({org_code: 'your_org_code'});
+client.login({ org_code: 'your_org_code' });
 ```
 
 Following authentication, Kinde provides a json web token (jwt) to your application. Along with the standard information we also include the org_code and the permissions for that organization (this is important as a user can belong to multiple organizations and have different permissions for each). Example of a returned token:
+
 ```json
 {
-	"aud": [],
-	"exp": 1658475930,
-	"iat": 1658472329,
-	"iss": "https://your_subdomain.kinde.com",
-	"jti": "123457890",
-	"org_code": "org_1234",
-	"permissions": ["read:todos", "create:todos"],
-	"scp": [
-		"openid",
-		"profile",
-		"email",
-		"offline"
-	],
-	"sub": "kp:123457890"
+    "aud": [],
+    "exp": 1658475930,
+    "iat": 1658472329,
+    "iss": "https://your_subdomain.kinde.com",
+    "jti": "123457890",
+    "org_code": "org_1234",
+    "permissions": ["read:todos", "create:todos"],
+    "scp": ["openid", "profile", "email", "offline"],
+    "sub": "kp:123457890"
 }
 ```
+
 The `id_token` will also contain an array of Organizations that a user belongs to - this is useful if you wanted to build out an organization switcher for example.
+
 ```json
 {
   ...
@@ -585,19 +588,32 @@ The `id_token` will also contain an array of Organizations that a user belongs t
   ...
 }
 ```
+
 There are two helper functions you can use to extract information:
+
 ```javascript
-client.getOrganization();
+await client.getOrganization();
 // {orgCode: "org_1234"}
 
-client.getUserOrganizations();
+await client.getUserOrganizations();
 // {orgCodes: ["org_1234", "org_abcd"]}
 ```
 
 ## Token Storage
-Once the user has successfully authenticated, you'll have a JWT and possibly a refresh token that should be stored securely.
 
-Recommendations on secure token storage can be found [here](https://reactnative.dev/docs/security#storing-sensitive-info).
+Once the user has successfully authenticated, you'll have a JWT and a refresh token and that has been stored securely.
+E.g., using the `getAccessToken` method of `the Storage` class to get an access token:
+```javascript
+...
+import Storage from '{{{projectName}}}'
+...
+
+
+const accessToken = await Storage.getAccessToken();
+console.log('access_token', accessToken);
+```
+We're using the [react-native-keychain](https://www.npmjs.com/package/react-native-keychain) for `React Native` and the [expo-secure-store](https://www.npmjs.com/package/expo-secure-store) for `Expo`.
+More details at: [Storage class](./dist/SDK/Storage/index.d.ts)
 
 ## How to run test
 
@@ -610,6 +626,7 @@ npm test
 _Note: Ensure you have already run `npm install` before_
 
 ## SDK API Reference
+
 | Property                        | Type    | Is required | Default                      | Description                                                                                                       |
 | ------------------------------- | ------- | ----------- | ---------------------------- | ----------------------------------------------------------------------------------------------------------------- |
 | issuer                          | string  | Yes         |                              | Either your Kinde instance url or your custom domain. e.g [https://yourapp.kinde.com](https://yourapp.kinde.com/) |
@@ -638,8 +655,10 @@ _Note: Ensure you have already run `npm install` before_
 | isAuthenticated      | Return the boolean to demonstrate whether the user is authenticated or not.                       |                                     | await kinde.isAuthenticate                                                                                                                                                | true or false                                                                                                                                                                                                                |
 
 ## General tips
+
 Sometimes there will be issues related to caching when you develop React Native.
 There are some recommendations for cleaning the cache:
+
 1. Remove `node_modules`, `yarn.lock` or `package-lock.json`
 2. Clean cache: `yarn cache clean` or `npm cache clean --force`
 3. Make sure you have changed values in `.env` file
@@ -647,24 +666,34 @@ There are some recommendations for cleaning the cache:
 5. Run Metro Bundler: `yarn start --reset-cache` or `npm start --reset-cache`
 
 Assume your project path is `<StarterKit_PATH>`.
+
 ##### With Android:
+
 1. Clean cache:
+
 ```bash
-cd <StarterKit_PATH>/android./gradlew clean
+cd <StarterKit_PATH>/android
+./gradlew clean
 ```
+
 2. Follow the steps in the above `General tips`.
 
 ##### With iOS:
+
 1. Follow the steps at the above `General tips`.
 2. Clean cache:
+
 ```bash
-cd <StarterKit_PATH>/rm -rf Pods && rm -rd Podfile.lock
+cd <StarterKit_PATH>
+rm -rf Pods && rm -rd Podfile.lock
 ```
+
 3. Clean build folders on Xcode.
 
 If you need any assistance with getting Kinde connected reach out to us at support@kinde.com.
 
 ## How to run test
+
 The simplest way to run the JavaScript test suite is by using the following command at the root of your React Native checkout:
 ```bash
 npm test
