--- a/generators/react-native/src/main/resources/react-native/SDK/OAuth/AuthorizationCode.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/OAuth/AuthorizationCode.mustache
@@ -1,8 +1,16 @@
+{{>licenseInfo}}
+
+{{#emitJSDoc}}/**
+* The Oauth SDK module.
+* @module SDK/Oauth
+* @version {{projectVersion}}
+*/{{/emitJSDoc}}
+
 import { Linking } from 'react-native';
 import Url from 'url-parse';
 import { AdditionalParameters } from '../../types/KindeSDK';
 import KindeSDK from '../KindeSDK';
-import { sessionStorage } from '../Storage';
+import Storage from '../Storage';
 import {
     addAdditionalParameters,
     generateChallenge,
@@ -18,7 +26,7 @@ class AuthorizationCode {
      * @param {AdditionalParameters} additionalParameters - AdditionalParameters = {}
      * @returns A promise that resolves when the URL is opened.
      */
-    login(
+    authenticate(
         kindSDK: KindeSDK,
         usePKCE: boolean = false,
         startPage: 'login' | 'registration' = 'login',
@@ -36,12 +44,12 @@ class AuthorizationCode {
         const stateGenerated = generateRandomString();
         URLParsed.query['state'] = stateGenerated;
         addAdditionalParameters(URLParsed.query, additionalParameters);
-        sessionStorage.setState(stateGenerated);
+        Storage.setState(stateGenerated);
         if (usePKCE) {
             const challenge = generateChallenge();
             URLParsed.query['code_challenge'] = challenge.codeChallenge;
             URLParsed.query['code_challenge_method'] = 'S256';
-            sessionStorage.setCodeVerifier(challenge.codeVerifier);
+            Storage.setCodeVerifier(challenge.codeVerifier);
         }
         return Linking.openURL(URLParsed.toString());
     }
