--- a/generators/react-native/src/main/resources/react-native/SDK/Storage/index.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/Storage/index.mustache
@@ -68,7 +68,7 @@ class Storage extends BaseStore {
 
     async getExpiredAt() {
         const token = await this.getAccessToken();
-        return token ? jwtDecode<AccessTokenDecoded>(token)['exp'] : 0;
+        return token ? jwtDecode<AccessTokenDecoded>(token)?.['exp'] : 0;
     }
 
     getState() {
@@ -88,14 +88,6 @@ class Storage extends BaseStore {
             'codeVerifier',
             this.convertString(newCodeVerifier)
         );
-    }
-
-    getAuthStatus(): string | undefined {
-        return this.getItem('authStatus');
-    }
-
-    setAuthStatus(newAuthStatus: string): void {
-        return this.setItem('authStatus', this.convertString(newAuthStatus));
     }
 
     async clearAll() {
@@ -123,4 +115,4 @@ class Storage extends BaseStore {
 const sessionStorage = (globalThis.sessionStorage =
     globalThis.sessionStorage ?? new Storage()) as Storage;
 
-export { Storage, sessionStorage };
+export default sessionStorage;
