--- a/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
+++ b/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
@@ -13,6 +13,8 @@ export type AdditionalParameters = {
     org_name?: string;
 };
 
+export type OrgAdditionalParams = Omit<AdditionalParameters, 'audience'>;
+
 export type TokenID = {
     sub: string;
     given_name: string;
