--- a/generators/react-native/src/main/resources/react-native/index.mustache
+++ b/generators/react-native/src/main/resources/react-native/index.mustache
@@ -1,7 +1,6 @@
 {{>licenseInfo}}
 
 import KindeSDK from './SDK/KindeSDK';
-import * as Utils from './SDK/Utils'; 
 import Storage from './SDK/Storage';
 
 import * as ApiClient from './ApiClient';
@@ -47,12 +46,6 @@ export {
     ApiClient,
 
     <#emitJSDoc>/**
-        * The Utils SDK module.
-        * @property {module:SDK/Utils}
-    */</emitJSDoc>
-    Utils,
-
-    <#emitJSDoc>/**
         * The KindeSDK module.
         * @property {module:SDK/KindeSDK}
     */</emitJSDoc>
@@ -66,5 +59,6 @@ export {
 }
 <={{ }}=>
 
-export * from './apis';
-export * from './models';
+export * from './SDK/Enums';
+export * from './SDK/Utils';
+export * from './types/KindeSDK';
