--- a/generators/react-native/src/main/resources/react-native/package.mustache
+++ b/generators/react-native/src/main/resources/react-native/package.mustache
@@ -6,9 +6,9 @@
     "homepage": "https://kinde.com",
     "repository": {
         "type": "git",
-        "url": "https://github.com/{{{projectName}}}"
+        "url": "https://github.com/kinde-oss/react-native-sdk-0-6x"
     },
-    "bugs": "https://github.com/{{{projectName}}}",
+    "bugs": "https://github.com/kinde-oss/react-native-sdk-0-6x",
     "main": "dist{{#invokerPackage}}/{{.}}{{/invokerPackage}}/index.js",
     "scripts": {
         "build": "rimraf dist && npm run build:types && npm run build:js",
