--- a/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
+++ b/generators/react-native/src/main/resources/react-native/types/KindeSDK.mustache
@@ -15,18 +15,12 @@ export type AdditionalParameters = {
 
 export type OrgAdditionalParams = Omit<AdditionalParameters, 'audience'>;
 
-export type TokenID = {
-    sub: string;
-    given_name: string;
-    family_name: string;
-    email: string;
-};
-
 export type UserProfile = {
     id: string;
     given_name: string;
     family_name: string;
     email: string;
+    picture: string;
 };
 
 export type TokenResponse = {
@@ -47,11 +41,12 @@ export type AccessTokenDecoded = {
     jti: string;
     gty?: string[];
     scp?: string[];
-};
+} & Record<string, any>;
 
 export type IdTokenDecoded = {
     sub: string;
     given_name: string;
     family_name: string;
     email: string;
-};
+    picture: string;
+} & Record<string, any>;
