--- a/generators/react-native/src/main/resources/react-native/SDK/Storage/index.mustache
+++ b/generators/react-native/src/main/resources/react-native/SDK/Storage/index.mustache
@@ -9,7 +9,7 @@ import {
 } from '../../types/KindeSDK';
 import { TokenType } from '../Enums/TokenType.enum';
 import BaseStore from './Base';
-import Constants, { ExecutionEnvironment } from 'expo-constants';
+import { isExpoGo } from '../Utils';
 
 {{#emitJSDoc}}/**
 * The Storage SDK module.
@@ -23,9 +23,6 @@ class Storage extends BaseStore {
     }
 
     async getStorage() {
-        const isExpoGo =
-            Constants.executionEnvironment === ExecutionEnvironment.StoreClient;
-
         if (isExpoGo) {
             const builder = await import('./ExpoStorage');
             return new builder.default();
